--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-scroll-parallax": "^3.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
